# -AI-Powered-Restaurant-Recommendation-System-Zomato-Use-Case-

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: improvements_backend.md  improvements_frontend.md  phase-wise-architecture.md
frontend/: index.html  next.config.js  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/: __init__.py
src/app/: __main__.py
src/backend/: main.py
src/config/: settings.py
src/data/: __init__.py  cleaning.py  loader.py  models.py  repository.py  schema_audit.py
src/llm/: __init__.py
src/phases/: __init__.py
src/phases/phase1/: __init__.py  app_main.py  settings.py
src/phases/phase2/: __init__.py  cleaning.py  loader.py  models.py  repository.py  schema_audit.py
src/phases/phase3/: __init__.py  groq_client.py  preferences.py  service.py
src/restaurant_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/retrieval/: __init__.py
tests/: test_backend_api.py  test_cleaning.py  test_loader_fixture.py  test_phase3_groq.py  test_phase3_preferences.py
tests/fixtures/: restaurants_sample.json
